...
            android:textSize="21sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageView
            android:id="@+id/editButton"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentRight="true"
            android:layout_marginStart="140dp"
            android:background="@drawable/ic_edit"
            app:layout_constraintStart_toEndOf="@+id/Header"
...
            app:layout_constraintBottom_toBottomOf="parent"
            android:backgroundTint="@color/design_default_color_error"
            android:layout_marginBottom="27dp"
            tools:ignore="MissingConstraints">

                <Button
                    android:id="@+id/backButton"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:text="Back"
                    android:textSize="24sp" />
        </FrameLayout>
...
